--- a/02. Partie réglementaire/Article R1111-3 - 24884552.md
+++ b/02. Partie réglementaire/Article R1111-3 - 24884552.md
@@ -1,8 +1,7 @@
 # Article R1111-3
 
 La remise, au titre de la dation en paiement prévue par le code général des impôts, est effectuée selon la procédure fixée
-par les articles 384 A, 384 A bis, 384 A ter et 384 A quater de l'annexe II de ce même code pour les catégories de biens
-suivantes : 
+par les articles 384 A, 384 A bis, 384 A ter de l'annexe II de ce même code pour les catégories de biens suivantes : 
 
 1° Les œuvres d'art, livres, objets de collection et documents, de haute valeur artistique ou historique ; 
 
@@ -20,11 +19,11 @@ _Codifié par_:
 
 _Modifié par_:
 
-  - Décret n°2013-420 du 23 mai 2013 - art. 11 (V)
+  - Décret n°2014-132 du 17 février 2014 - art. 33
 
 _Cite_:
 
-  - Code général des impôts, annexe 2, CGIAN2. - art. 384 A
+  - Code général des impôts, annexe 2, CGIAN2. - art. 384 A (V)
 
 _Cité par_:
 
