--- a/01. Partie législative/Article L2124-18 - 6361254.md
+++ b/01. Partie législative/Article L2124-18 - 6361254.md
@@ -3,19 +3,28 @@
 L'édification de toute construction est interdite sur les terrains compris entre les digues et la rivière, sur les digues et
 levées, ou sur les îles.
 
-Du côté du val, il est interdit de planter des arbres ou arbustes, de creuser des puits, caves, fossés, ou faire toutes
-autres excavations de terrain à moins de 19,50 mètres du pied des levées.
-
-Toute construction doit faire l'objet d'une autorisation préfectorale.
+Du côté du val, les ouvrages, plantations, constructions, excavations et clôtures situés à moins de 19,50 mètres du pied des
+levées sont soumis à autorisation préfectorale. L'autorisation prescrit les mesures nécessaires pour assurer, en toutes
+circonstances, la sécurité des biens et des personnes, l'accès aux ouvrages de protection, leur entretien ou leur
+fonctionnement. 
 
 En cas de non-respect de ces dispositions, le contrevenant est passible d'une amende de 150 à 12 000 euros. Il doit, après
 mise en demeure préalable, procéder à la remise en état des lieux.
 
 **Liens relatifs à cet article**
 
+_Anciens textes_:
+
+  - Code du domaine public fluvial et de la navigation intérieure art. 59
+  - Code du domaine public fluvial et de la navigation - art. 59 (Ab)
+
 _Codifié par_:
 
-  - Ordonnance 2006-460 2006-04-21 JORF 22 avril 2006
+  - Ordonnance n°2006-460 du 21 avril 2006
+
+_Modifié par_:
+
+  - Loi n°2014-366 du 24 mars 2014 - art. 127
 
 _Cité par_:
 
@@ -23,8 +32,3 @@ _Cité par_:
   - Code de l'urbanisme - art. L422-2 (V)
   - Code de l'urbanisme - art. R*422-2 (V)
   - Code de l'urbanisme - art. R*425-10 (VD)
-
-_Anciens textes_:
-
-  - Code du domaine public fluvial et de la navigation - art. 59 (Ab)
-  - Code du domaine public fluvial et de la navigation intérieure art. 59
