--- a/01. Partie législative/Article L3211-7 - 6361425.md
+++ b/01. Partie législative/Article L3211-7 - 6361425.md
@@ -1,6 +1,6 @@
 # Article L3211-7
 
-I. - L'Etat peut procéder à l'aliénation de terrains de son domaine privé à un prix inférieur à la valeur vénale lorsque ces
+I.-L'Etat peut procéder à l'aliénation de terrains de son domaine privé à un prix inférieur à la valeur vénale lorsque ces
 terrains, bâtis ou non, sont destinés à la réalisation de programmes de constructions comportant essentiellement des
 logements dont une partie au moins est réalisée en logement social. Pour la part du programme destinée aux logements sociaux,
 la décote ainsi consentie, qui peut atteindre 100 % de la valeur vénale du terrain, est fixée en fonction de la catégorie à
@@ -10,7 +10,7 @@ logements sociaux existant sur le territoire de la collectivité considérée et
 l'opération. La décote ne saurait excéder 50 % pour les logements financés en prêts locatifs sociaux et pour les logements en
 accession à la propriété bénéficiant des dispositifs mentionnés au VIII. 
 
-II. - Une décote est de droit lorsque les deux conditions suivantes sont satisfaites : 
+II.-Une décote est de droit lorsque les deux conditions suivantes sont satisfaites : 
 
 1° Les terrains sont cédés au profit d'une collectivité territoriale, d'un établissement public de coopération intercommunale
 à fiscalité propre, d'un établissement public mentionné aux chapitres Ier et IV du titre II du livre III du code de
@@ -37,7 +37,7 @@ l'objet est la construction d'équipements publics destinés en tout ou partie a
 consentie est alignée sur la décote allouée pour la part du programme consacrée aux logements sociaux. Les modalités
 d'application du présent alinéa et la liste des équipements publics concernés sont fixées par décret en Conseil d'Etat. 
 
-III. - L'avantage financier résultant de la décote est exclusivement et en totalité répercuté sur le prix de revient des
+III.-L'avantage financier résultant de la décote est exclusivement et en totalité répercuté sur le prix de revient des
 logements locatifs sociaux. 
 
 Cette décote est également répercutée sur le prix de cession des logements en accession à la propriété bénéficiant des
@@ -58,8 +58,7 @@ similaires.
 A peine de nullité, les contrats de vente comportent la mention des obligations visées aux troisième et quatrième alinéas du
 présent III et du montant de la décote consentie. 
 
-IV. - Pour les programmes ayant bénéficié de la cession d'un terrain avec une décote dans les conditions du présent
-article : 
+IV.-Pour les programmes ayant bénéficié de la cession d'un terrain avec une décote dans les conditions du présent article : 
 
 1° Les conventions mentionnées à l'article L. 351-2 du code de la construction et de l'habitation sont d'une durée au moins
 égale à vingt ans. Cette durée ne peut être inférieure à la période restant à courir pour l'amortissement du prêt. Le
@@ -68,7 +67,7 @@ remboursement anticipé du prêt n'a pas d'incidence sur la durée de la convent
 2° Le délai de dix ans mentionné au premier alinéa de l'article L. 443-7 du même code est porté à vingt ans. Cette
 disposition s'applique également aux opérations des organismes agréés mentionnés à l'article L. 365-2 dudit code. 
 
-V. - Une convention conclue entre le représentant de l'Etat dans la région et l'acquéreur, jointe à l'acte d'aliénation, fixe
+V.-Une convention conclue entre le représentant de l'Etat dans la région et l'acquéreur, jointe à l'acte d'aliénation, fixe
 les conditions d'utilisation du terrain cédé et détermine le contenu du programme de logements à réaliser. 
 
 Les données dont l'Etat dispose sur le patrimoine naturel du terrain faisant l'objet de la cession sont annexées à cette
@@ -87,11 +86,18 @@ L'acte d'aliénation prévoit, en cas de réalisation partielle du programme de 
 différentes de celles prises en compte pour la fixation du prix de cession, le paiement d'un complément de prix correspondant
 à l'avantage financier indûment consenti. 
 
+Lorsque la cession d'un terrain, bâti ou non, du domaine privé de l'Etat s'inscrit dans une opération d'aménagement, au sens
+de l'article L. 300-1 du code de l'urbanisme, qui porte sur un périmètre de plus de cinq hectares, et après accord des
+ministres chargés du logement et du domaine, au vu du rapport transmis par le représentant de l'Etat dans la région, la
+convention conclue entre le représentant de l'Etat dans la région et l'acquéreur peut prévoir une réalisation de l'opération
+par tranches échelonnées sur une durée totale supérieure à cinq ans et permettant chacune un contrôle du dispositif de
+décote, dans les conditions prévues aux troisième et quatrième alinéas du présent V. 
+
 La convention peut prévoir, en outre, le droit de réservation d'un contingent plafonné à 10 % des logements sociaux
 construits, au profit de l'administration qui cède son terrain avec décote, pour le logement de ses agents, au-delà du
 contingent dont dispose l'Etat. 
 
-VI. - Le représentant de l'Etat dans la région, assisté du comité régional de l'habitat, contrôle l'effectivité de toute
+VI.-Le représentant de l'Etat dans la région, assisté du comité régional de l'habitat, contrôle l'effectivité de toute
 convention annexée à un acte d'aliénation et définie au V du présent article. A cet effet, l'acquéreur des terrains
 mentionnés au 2° du II rend compte de l'état d'avancement du programme de constructions au comité régional de l'habitat ainsi
 qu'à la commune sur le territoire de laquelle se trouve le terrain cédé. Cette obligation prend fin au jour de la livraison
@@ -107,7 +113,7 @@ sociaux mis en chantier sur les parcelles cédées. Ce bilan est transmis à la 
 d'établir, pour le compte du ministre chargé du logement, le rapport annuel au Parlement sur la mise en œuvre du dispositif,
 lequel fait l'objet d'un débat devant les commissions permanentes. 
 
-VII. - Il est créé, auprès des ministres chargés du logement et de l'urbanisme, une Commission nationale de l'aménagement, de
+VII.-Il est créé, auprès des ministres chargés du logement et de l'urbanisme, une Commission nationale de l'aménagement, de
 l'urbanisme et du foncier. Elle est composée de deux membres de l'Assemblée nationale et de deux membres du Sénat, de
 représentants de l'Etat dont notamment de représentants des ministres chargés du logement et de l'urbanisme, de représentants
 du ministre chargé du Domaine, de représentants des associations représentatives des collectivités locales, des organismes
@@ -121,7 +127,7 @@ publics concernés est de nature à favoriser la cession de biens appartenant à
 de logements sociaux. Le décret en Conseil d'Etat prévu au IX précise sa composition et fixe ses modalités de travail et de
 décision. 
 
-VIII. - Pour l'application du présent article, sont assimilés aux logements locatifs mentionnés aux 3° et 5° de l'article L.
+VIII.-Pour l'application du présent article, sont assimilés aux logements locatifs mentionnés aux 3° et 5° de l'article L.
 351-2 du code de la construction et de l'habitation : 
 
 1° Les structures d'hébergement temporaire ou d'urgence bénéficiant d'une aide de l'Etat ; 
@@ -145,7 +151,7 @@ code ;
 b) Les logements faisant l'objet d'une opération d'accession dans les conditions définies au huitième alinéa de l'article L.
 411-2 dudit code. 
 
-IX. - Un décret en Conseil d'Etat précise les conditions d'application des I à VII.
+IX.-Un décret en Conseil d'Etat précise les conditions d'application des I à VII.
 
 **Liens relatifs à cet article**
 
@@ -153,6 +159,7 @@ _Cite_:
 
   - Loi n°2000-614 du 5 juillet 2000 - art. 1
   - Code de l'action sociale et des familles - art. L345-1
+  - Code de l'urbanisme - art. L300-1 (V)
   - Code de la construction et de l'habitation. - art. L351-2
   - Code de la construction et de l'habitation. - art. L353-1
   - Code de la construction et de l'habitation. - art. L365-1
@@ -196,7 +203,7 @@ _Cité par_:
 
 _Modifié par_:
 
-  - Loi n°2013-61 du 18 janvier 2013 - art. 3
+  - Loi n°2014-366 du 24 mars 2014 - art. 160
 
 _Anciens textes_:
 
