--- a/01. Partie législative/Article L1123-1 - 6361150.md
+++ b/01. Partie législative/Article L1123-1 - 6361150.md
@@ -5,15 +5,24 @@ Sont considérés comme n'ayant pas de maître les biens autres que ceux relevan
 1° Soit font partie d'une succession ouverte depuis plus de trente ans et pour laquelle aucun successible ne s'est
 présenté ; 
 
-2° Soit sont des immeubles qui n'ont pas de propriétaire connu et pour lesquels depuis plus de trois ans les taxes foncières
-n'ont pas été acquittées ou ont été acquittées par un tiers. Ces dispositions ne font pas obstacle à l'application des règles
-de droit civil relatives à la prescription.
+2° Soit sont des immeubles qui n'ont pas de propriétaire connu et pour lesquels depuis plus de trois ans la taxe foncière sur
+les propriétés bâties n'a pas été acquittée ou a été acquittée par un tiers. Ces dispositions ne font pas obstacle à
+l'application des règles de droit civil relatives à la prescription ;
+
+3° Soit sont des immeubles qui n'ont pas de propriétaire connu, qui ne sont pas assujettis à la taxe foncière sur les
+propriétés bâties et pour lesquels, depuis plus de trois ans, la taxe foncière sur les propriétés non bâties n'a pas été
+acquittée ou a été acquittée par un tiers. Le présent 3° ne fait pas obstacle à l'application des règles de droit civil
+relatives à la prescription.
 
 **Liens relatifs à cet article**
 
 _Codifié par_:
 
-  - Ordonnance 2006-460 2006-04-21 JORF 22 avril 2006
+  - Ordonnance n°2006-460 du 21 avril 2006
+
+_Modifié par_:
+
+  - Loi n°2014-1170 du 13 octobre 2014 - art. 72
 
 _Cité par_:
 
@@ -25,4 +34,4 @@ _Cité par_:
 
 _Cite_:
 
-  - Code général de la propriété des personnes publ... - art. L1122-1 (V)
+  - Code général de la propriété des personnes publiques. - art. L1122-1
