--- a/01. Partie législative/Article L3211-5 - 6361423.md
+++ b/01. Partie législative/Article L3211-5 - 6361423.md
@@ -14,20 +14,27 @@ et à la protection de la qualité des eaux, ni à l'équilibre biologique d'une
 
 Par dérogation aux dispositions du premier alinéa, les bois et forêts de l'Etat compris dans le périmètre d'une déclaration
 d'utilité publique sont cédés conformément aux dispositions du dernier alinéa de l'article L. 12-4 du code de l'expropriation
-pour cause d'utilité publique dans les conditions précisées par décret en Conseil d'Etat.
+pour cause d'utilité publique dans les conditions précisées par décret en Conseil d'Etat. 
+
+Les bois et forêts acquis à l'Etat en application de l'article L. 1123-4 sont soumis au premier alinéa du présent article à
+compter de la date à laquelle le régime forestier de l'article L. 211-1 du code forestier leur est appliqué.
 
 **Liens relatifs à cet article**
 
 _Codifié par_:
 
-  - Ordonnance 2006-460 2006-04-21 JORF 22 avril 2006
+  - Ordonnance n°2006-460 du 21 avril 2006
+
+_Modifié par_:
+
+  - Loi n°2014-1170 du 13 octobre 2014 - art. 72
 
 _Cité par_:
 
   - Loi n°2016-925 du 7 juillet 2016 - art. 75
   - Code du patrimoine - art. L621-35 (MMN)
   - Code du patrimoine - art. L621-40 (V)
-  - Code forestier (nouveau) - art. L213-1 (VD)
+  - Code forestier (nouveau) - art. L213-1 (V)
   - Code général de la propriété des personnes publ... - art. L5161-1 (V)
   - Code général de la propriété des personnes publ... - art. L5241-1 (VD)
   - Code général de la propriété des personnes publ... - art. L5341-1 (V)
@@ -42,10 +49,8 @@ _Anciens textes_:
 
   - Code du domaine de l'Etat - art. L62 (Ab)
 
-_Nouveaux textes_:
-
-  - Code forestier (nouveau) - art. L213-1 (VD)
-
 _Cite_:
 
-  - CODE DE L'EXPROPRIATION POUR CAUSE D'UTILITE PU... - art. L12-4 (V)
+  - Code général de la propriété des personnes publ... - art. L1123-4 (V)
+  - Code de l'expropriation pour cause d'utilité pu... - art. L12-4 (VD)
+  - Code forestier (nouveau) - art. L211-1 (V)
