--- a/02. Partie réglementaire/Article R1211-1 - 24884642.md
+++ b/02. Partie réglementaire/Article R1211-1 - 24884642.md
@@ -2,11 +2,15 @@
 
 Les projets d'opérations immobilières mentionnés à l'article R. 1211-2 doivent être précédés, avant toute entente amiable,
 d'une demande d'avis du directeur départemental des finances publiques lorsqu'ils sont poursuivis par l'Etat et ses
-établissements publics. 
+établissements publics.
 
-Ces dispositions ne sont pas applicables aux établissements de crédit.
+Ces dispositions ne sont pas applicables aux établissements de crédit ou aux sociétés de financement.
 
 **Liens relatifs à cet article**
+
+_Codifié par_:
+
+  - Décret n°2011-1612 du 22 novembre 2011 - art.
 
 _Cité par_:
 
@@ -17,14 +21,6 @@ _Cité par_:
   - Code des transports - art. R5313-53 (V)
   - Code général de la propriété des personnes publ... - art. R1211-2 (V)
 
-_Anciens textes_:
+_Modifié par_:
 
-  - Décret n°86-455 du 14 mars 1986 - art. 3 (Ab), ecqc les projets d'aquisitions poursuivis par l'Etat et ses établissements publics.
-
-_Codifié par_:
-
-  - Décret n°2011-1612 du 22 novembre 2011 - art.
-
-_Créé par_:
-
-  - Décret n°2011-1612 du 22 novembre 2011 - art.
+  - Décret n°2014-1315 du 3 novembre 2014 - art. 14
