--- a/02. Partie réglementaire/Article R4111-2 - 24885860.md
+++ b/02. Partie réglementaire/Article R4111-2 - 24885860.md
@@ -1,24 +1,20 @@
 # Article R4111-2
 
 Les projets d'opérations immobilières mentionnés à l'article R. 4111-1 poursuivis par l'Etat et ses établissements publics
-doivent être précédés, avant toute entente amiable, d'une demande d'avis du directeur départemental des finances publiques. 
+doivent être précédés, avant toute entente amiable, d'une demande d'avis du directeur départemental des finances publiques.
 
-Ces dispositions ne sont pas applicables aux établissements de crédit.
+Ces dispositions ne sont pas applicables aux établissements de crédit ou aux sociétés de financement.
 
 **Liens relatifs à cet article**
-
-_Anciens textes_:
-
-  - Décret n°86-455 du 14 mars 1986 - art. 3 (Ab), ecqc les projets de prise en location poursuivis par l'Etat et ses établissements publics.
 
 _Codifié par_:
 
   - Décret n°2011-1612 du 22 novembre 2011 - art.
 
-_Créé par_:
+_Modifié par_:
 
-  - Décret n°2011-1612 du 22 novembre 2011 - art.
+  - Décret n°2014-1315 du 3 novembre 2014 - art. 14
 
 _Cite_:
 
-  - Code général de la propriété des personnes publ... - art. R4111-1 (V)
+  - Code général de la propriété des personnes publiques. - art. R4111-1
