--- a/02. Partie réglementaire/Article R1211-8 - 24884656.md
+++ b/02. Partie réglementaire/Article R1211-8 - 24884656.md
@@ -2,7 +2,7 @@
 
 Les opérations immobilières qualifiées secrètes par décision du ministre de la défense, poursuivies par voie d'expropriation
 pour cause d'utilité publique par les services publics relevant de ce ministre ou placés sous sa tutelle, sont soumises à la
-commission d'examen des opérations immobilières présentant un caractère secret prévue par l'article R. 11-17 du code de
+commission d'examen des opérations immobilières présentant un caractère secret prévue par l'article R. 122-5 du code de
 l'expropriation pour cause d'utilité publique. 
 
 L'avis du directeur départemental des finances publiques prévu à l'article R. 1211-3 du présent code figure au dossier soumis
@@ -14,9 +14,9 @@ _Codifié par_:
 
   - Décret n°2011-1612 du 22 novembre 2011 - art.
 
-_Créé par_:
+_Modifié par_:
 
-  - Décret n°2011-1612 du 22 novembre 2011 - art.
+  - Décret n°2014-1635 du 26 décembre 2014 - art. 4
 
 _Anciens textes_:
 
@@ -25,5 +25,5 @@ _Anciens textes_:
 
 _Cite_:
 
-  - Code général de la propriété des personnes publ... - art. R1211-3 (V)
-  - CODE DE L'EXPROPRIATION POUR CAUSE D'UTILITE PU... - art. R11-17 (V)
+  - Code général de la propriété des personnes publ... - art. R1211-3 (VD)
+  - Code de l'expropriation pour cause d'utilité pu... - art. R122-5 (V)
