--- a/02. Partie réglementaire/Article R3211-34 - 24885708.md
+++ b/02. Partie réglementaire/Article R3211-34 - 24885708.md
@@ -1,12 +1,12 @@
 # Article R3211-34
 
 Les dispositions des articles R. 3211-19 à R. 3211-23 sont applicables aux demandes de concession portant sur les
-atterrissements prévus à l'article L. 3211-15, sous réserve des adaptations suivantes : 
+atterrissements prévus à l'article L. 3211-15, sous réserve des adaptations suivantes :
 
 1° L'instruction est conduite par l'autorité compétente de la personne publique propriétaire. Lorsqu'elle intéresse l'Etat,
-cette instruction relève du chef du service gestionnaire du domaine fluvial ; 
+cette instruction relève du chef du service gestionnaire du domaine fluvial ;
 
-2° L'avis du général commandant la région militaire est demandé. L'absence de réponse dans un délai de deux mois vaut avis
+2° L'avis du général commandant la zone terre est demandé. L'absence de réponse dans un délai de deux mois vaut avis
 favorable. Dans les départements d'outre-mer, cet avis est donné par l'officier général commandant supérieur des forces
 armées.
 
@@ -16,22 +16,16 @@ _Codifié par_:
 
   - Décret n°2011-1612 du 22 novembre 2011 - art.
 
-_Créé par_:
+_Modifié par_:
 
-  - Décret n°2011-1612 du 22 novembre 2011 - art.
-
-_Anciens textes_:
-
-  - Code du domaine de l'Etat - art. R145 (Ab), ecqc les concessions portant sur le domaine fluvial.
-  - Code du domaine de l'Etat - art. R145-1 (Ab), ecqc les concessions portant sur le domaine fluvial.
-  - Code du domaine de l'Etat - art. R145-2 (Ab), ecqc les concessions portant sur le domaine fluvial.
-  - Code du domaine de l'Etat - art. R146 (Ab), ecqc les concessions portant sur le domaine fluvial.
-
-_Cite_:
-
-  - Code général de la propriété des personnes publ... - art. L3211-15 (V)
-  - Code général de la propriété des personnes publ... - art. R3211-19 (V)
+  - Décret n°2015-211 du 25 février 2015 - art. 25
 
 _Cité par_:
 
+  - Code de la défense. - art. R3222-5 (V)
   - Code général de la propriété des personnes publ... - art. R5241-4 (V)
+
+_Cite_:
+
+  - Code général de la propriété des personnes publiques. - art. L3211-15
+  - Code général de la propriété des personnes publiques. - art. R3211-19
