--- a/01. Partie législative/Article L2122-17 - 6361218.md
+++ b/01. Partie législative/Article L2122-17 - 6361218.md
@@ -5,8 +5,8 @@ des ports qui relèvent de la compétence des départements, mis à disposition 
 profit, d'un transfert de gestion. 
 
 Les autorisations, décisions et agréments mentionnés aux articles L. 2122-6 à L. 2122-10 sont pris ou accordés, après
-consultation du représentant de l'Etat, par le président du conseil général. Ils peuvent également être pris ou accordés par
-le concessionnaire, lorsque les termes de la concession le prévoient expressément. 
+consultation du représentant de l'Etat, par le président du conseil départemental . Ils peuvent également être pris ou
+accordés par le concessionnaire, lorsque les termes de la concession le prévoient expressément. 
 
 Un décret en Conseil d'Etat fixe les modalités d'application du présent article.
 
@@ -14,11 +14,14 @@ Un décret en Conseil d'Etat fixe les modalités d'application du présent artic
 
 _Codifié par_:
 
-  - Ordonnance 2006-460 2006-04-21 JORF 22 avril 2006
+  - Ordonnance n°2006-460 du 21 avril 2006
+
+_Modifié par_:
+
+  - Loi n°2013-403 du 17 mai 2013 - art. 1 (V)
 
 _Anciens textes_:
 
-  - Code du domaine de l'Etat L34-8-1 ecqc les ports relevant de la compétence des départements
   - Code du domaine de l'Etat - art. L34-8-1 (Ab)
 
 _Cité par_:
@@ -28,4 +31,4 @@ _Cité par_:
 
 _Cite_:
 
-  - Code général de la propriété des personnes publ... - art. L2122-6 (V)
+  - Code général de la propriété des personnes publiques. - art. L2122-6
