--- a/02. Partie réglementaire/Article R2122-51 - 24884955.md
+++ b/02. Partie réglementaire/Article R2122-51 - 24884955.md
@@ -1,21 +1,17 @@
 # Article R2122-51
 
 La demande de titre d'occupation constitutif de droit réel mentionné à l'article R. 2122-50 est adressée au président du
-conseil général ou, lorsque les termes de la concession le prévoient expressément, au concessionnaire. 
+conseil départemental ou, lorsque les termes de la concession le prévoient expressément, au concessionnaire.
 
 Elle est instruite par le service du département chargé de la gestion des ports ou, si cette gestion lui a été confiée, par
-le service déconcentré compétent de l'Etat. 
+le service déconcentré compétent de l'Etat.
 
-Le dossier de la demande est constitué dans les conditions prévues à l'article R. 2122-13. 
+Le dossier de la demande est constitué dans les conditions prévues à l'article R. 2122-13.
 
 Lorsque des règlements soumettent les autorisations d'occupation du domaine public délivrées en application de l'article L.
 2122-1 à des procédures de délivrance ou d'approbation particulières, ces procédures demeurent applicables pour la délivrance
 d'autorisations constitutives de droit réel dans la mesure où elles ne sont pas contraires aux dispositions du présent
 article et des articles R. 2122-50 et R. 2122-54.
-
-**Nota:**
-
-
 
 **Liens relatifs à cet article**
 
@@ -23,17 +19,13 @@ _Codifié par_:
 
   - Décret n°2011-1612 du 22 novembre 2011 - art.
 
-_Créé par_:
+_Modifié par_:
 
-  - Décret n°2011-1612 du 22 novembre 2011 - art.
-
-_Anciens textes_:
-
-  - Code du domaine de l'Etat - art. R57-12 (Ab)
+  - Décret n°2013-938 du 18 octobre 2013 - art. 1 (VD)
 
 _Cite_:
 
-  - Code général de la propriété des personnes publ... - art. L2122-1 (V)
-  - Code général de la propriété des personnes publ... - art. R2122-13 (V)
-  - Code général de la propriété des personnes publ... - art. R2122-50 (V)
-  - Code général de la propriété des personnes publ... - art. R2122-54 (V)
+  - Code général de la propriété des personnes publiques. - art. L2122-1
+  - Code général de la propriété des personnes publiques. - art. R2122-13
+  - Code général de la propriété des personnes publiques. - art. R2122-50
+  - Code général de la propriété des personnes publiques. - art. R2122-54
