--- a/01. Partie législative/Article L2111-7 - 6361185.md
+++ b/01. Partie législative/Article L2111-7 - 6361185.md
@@ -1,13 +1,13 @@
 # Article L2111-7
 
-Le domaine public fluvial naturel est constitué des cours d'eau et lacs appartenant à l'Etat, aux collectivités territoriales
-ou à leurs groupements, et classés dans leur domaine public fluvial.
+Le domaine public fluvial naturel est constitué des cours d'eau et lacs appartenant à l'Etat, à ses établissements publics,
+aux collectivités territoriales ou à leurs groupements, et classés dans leur domaine public fluvial.
 
 **Liens relatifs à cet article**
 
 _Codifié par_:
 
-  - Ordonnance 2006-460 2006-04-21 JORF 22 avril 2006
+  - Ordonnance n°2006-460 du 21 avril 2006
 
 _Cité par_:
 
@@ -21,6 +21,10 @@ _Cité par_:
   - Code général de la propriété des personnes publ... - art. L5361-1 (V)
   - Code général de la propriété des personnes publ... - art. L5461-1 (V)
   - Code rural - art. L924-2 (V)
+
+_Modifié par_:
+
+  - Loi n°2015-991 du 7 août 2015 - art. 22 (V)
 
 _Anciens textes_:
 
