--- a/01. Partie législative/Article L2125-1 - 6361271.md
+++ b/01. Partie législative/Article L2125-1 - 6361271.md
@@ -11,7 +11,10 @@ Par dérogation aux dispositions de l'alinéa précédent, l'autorisation d'occu
 1° Soit lorsque l'occupation ou l'utilisation est la condition naturelle et forcée de l'exécution de travaux ou de la
 présence d'un ouvrage, intéressant un service public qui bénéficie gratuitement à tous ; 
 
-2° Soit lorsque l'occupation ou l'utilisation contribue directement à assurer la conservation du domaine public lui-même. 
+2° Soit lorsque l'occupation ou l'utilisation contribue directement à assurer la conservation du domaine public lui-même ;
+
+4° Soit lorsque l'occupation ou l'utilisation permet l'exécution de travaux relatifs à une infrastructure de transport public
+ferroviaire ou guidé. 
 
 En outre, l'autorisation d'occupation ou d'utilisation du domaine public peut être délivrée gratuitement aux associations à
 but non lucratif qui concourent à la satisfaction d'un intérêt général.
@@ -27,10 +30,6 @@ _Cité par_:
   - Code général de la propriété des personnes publ... - art. L5163-7 (V)
   - Code général de la propriété des personnes publ... - art. L5331-17 (VT)
   - Code général de la propriété des personnes publiqu - art. L5311-2 (V)
-
-_Modifié par_:
-
-  - Loi n°2010-1658 du 29 décembre 2010 - art. 49
 
 _Cite_:
 
