--- a/02. Partie réglementaire/Article R2122-53 - 24884961.md
+++ b/02. Partie réglementaire/Article R2122-53 - 24884961.md
@@ -1,9 +1,10 @@
 # Article R2122-53
 
-La demande de titre d'occupation constitutif de droit réel mentionné à l'article R. 2122-52 est adressée au maire ou, lorsque
-les termes de la concession le prévoient expressément, au concessionnaire. 
+La demande de titre d'occupation constitutif de droit réel mentionné à l'article R. 2122-52 est adressée au maire, au
+président de l'organe délibérant du groupement de collectivités territoriales ou, lorsque les termes de la concession le
+prévoient expressément, au concessionnaire.
 
-Le dossier de la demande est constitué dans les conditions prévues à l'article R. 2122-13. 
+Le dossier de la demande est constitué dans les conditions prévues à l'article R. 2122-13.
 
 Lorsque des règlements soumettent les autorisations d'occupation du domaine public délivrées en application de l'article L.
 2122-1 à des procédures de délivrance ou d'approbation particulières, ces procédures demeurent applicables pour la délivrance
@@ -16,20 +17,16 @@ _Codifié par_:
 
   - Décret n°2011-1612 du 22 novembre 2011 - art.
 
-_Créé par_:
+_Modifié par_:
 
-  - Décret n°2011-1612 du 22 novembre 2011 - art.
-
-_Anciens textes_:
-
-  - Code du domaine de l'Etat - art. R57-16 (Ab)
+  - Décret n°2015-1789 du 28 décembre 2015 - art. 1
 
 _Cite_:
 
-  - Code général de la propriété des personnes publ... - art. L2122-1 (V)
-  - Code général de la propriété des personnes publ... - art. R2122-13 (V)
   - Code général de la propriété des personnes publ... - art. R2122-52 (V)
+  - Code général de la propriété des personnes publiques. - art. L2122-1
+  - Code général de la propriété des personnes publiques. - art. R2122-13
 
 _Cité par_:
 
-  - Code général de la propriété des personnes publ... - art. R2122-55 (M)
+  - Code général de la propriété des personnes publ... - art. R2122-55 (V)
