--- a/02. Partie réglementaire/Article R2122-54 - 24884965.md
+++ b/02. Partie réglementaire/Article R2122-54 - 24884965.md
@@ -1,7 +1,7 @@
 # Article R2122-54
 
 Les dispositions des articles R. 2122-17 à R. 2122-27 sont applicables aux titres délivrés en application des articles R.
-2122-50 et R. 2122-52.
+2122-50, R. 2122-52 et R. 2122-53-1.
 
 **Liens relatifs à cet article**
 
@@ -9,19 +9,16 @@ _Codifié par_:
 
   - Décret n°2011-1612 du 22 novembre 2011 - art.
 
-_Créé par_:
+_Modifié par_:
 
-  - Décret n°2011-1612 du 22 novembre 2011 - art.
-
-_Anciens textes_:
-
-  - Code du domaine de l'Etat - art. R57-13 (Ab)
-  - Code du domaine de l'Etat - art. R57-17 (Ab)
+  - Décret n°2015-1789 du 28 décembre 2015 - art. 1
 
 _Cite_:
 
-  - Code général de la propriété des personnes publ... - art. R2122-17 (V)
   - Code général de la propriété des personnes publ... - art. R2122-50 (V)
+  - Code général de la propriété des personnes publ... - art. R2122-52 (V)
+  - Code général de la propriété des personnes publ... - art. R2122-53-1 (V)
+  - Code général de la propriété des personnes publiques. - art. R2122-17
 
 _Cité par_:
 
