--- a/01. Partie législative/Article L1112-6 - 6361137.md
+++ b/01. Partie législative/Article L1112-6 - 6361137.md
@@ -3,13 +3,16 @@
 Le droit de préemption des collectivités territoriales, de leurs groupements et de leurs établissements publics est exercé
 dans les conditions fixées :
 
-1° Aux chapitres II et III du titre IV du livre Ier du code de l'urbanisme, en ce qui concerne les espaces naturels sensibles
-des départements et la protection et la mise en valeur des espaces agricoles et naturels périurbains ;
+1° A l'article L. 113-25 du code de l'urbanisme, en ce qui concerne la mise en valeur des espaces agricoles et naturels
+périurbains ;
 
-2° Aux chapitres Ier, II et III du titre Ier du livre II du code de l'urbanisme, en ce qui concerne le droit de préemption
+2° Au chapitre V du titre Ier du livre II du code de l'urbanisme en ce qui concerne les espaces naturels sensibles des
+départements ;
+
+3° Aux chapitres Ier, II et III du titre Ier du livre II du code de l'urbanisme, en ce qui concerne le droit de préemption
 urbain, les zones d'aménagement différé et les périmètres provisoires ;
 
-3° Au chapitre IV du titre Ier du livre II du code de l'urbanisme, en ce qui concerne les fonds artisanaux, les fonds de
+4° Au chapitre IV du titre Ier du livre II du code de l'urbanisme, en ce qui concerne les fonds artisanaux, les fonds de
 commerce et les baux commerciaux.
 
 Le droit de préemption des établissements publics fonciers locaux est exercé dans les conditions fixées au chapitre IV du
@@ -19,8 +22,16 @@ titre II du livre III du code de l'urbanisme.
 
 _Codifié par_:
 
-  - Ordonnance 2006-460 2006-04-21 JORF 22 avril 2006
+  - Ordonnance n°2006-460 du 21 avril 2006
+
+_Modifié par_:
+
+  - ORDONNANCE n°2015-1174 du 23 septembre 2015 - art. 9
 
 _Cité par_:
 
   - Code général de la propriété des personnes publ... - art. L5311-2 (VD)
+
+_Cite_:
+
+  - Code de l'urbanisme - art. L113-25 (VD)
