--- a/02. Partie réglementaire/Article R1126-2 - 24884620.md
+++ b/02. Partie réglementaire/Article R1126-2 - 24884620.md
@@ -1,13 +1,8 @@
 # Article R1126-2
 
-La remise des sommes et valeurs mentionnées aux 1°, 2°, 3° et 4° de l'article L. 1126-1 a lieu auprès du comptable de la
-direction générale des finances publiques du siège du déposant, dans les vingt premiers jours du mois de janvier de chaque
-année. Elle comprend l'ensemble des dépôts et avoirs qui ont été atteints par la prescription au cours de l'année
-précédente. 
-
-Les banques ou établissements qui possèdent des agences ou succursales dont les écritures comptables ne sont pas centralisées
-à l'établissement principal effectuent la remise auprès du comptable de la direction générale des finances publiques du siège
-de l'agence ou de la succursale détenant les sommes et valeurs dues.
+La remise des sommes et valeurs mentionnées aux 1°, 3° et 4° de l'article L. 1126-1 a lieu auprès du comptable spécialisé du
+domaine, dans les vingt premiers jours du mois de janvier de chaque année. Elle comprend l'ensemble des dépôts et avoirs qui
+ont été atteints par la prescription au cours de l'année précédente.
 
 **Liens relatifs à cet article**
 
@@ -15,18 +10,14 @@ _Codifié par_:
 
   - Décret n°2011-1612 du 22 novembre 2011 - art.
 
-_Créé par_:
+_Modifié par_:
 
-  - Décret n°2011-1612 du 22 novembre 2011 - art.
+  - Décret n°2015-1092 du 28 août 2015 - art. 4
 
 _Cité par_:
 
   - Décret n°2017-1827 du 28 décembre 2017 - art. 3 (V)
-
-_Anciens textes_:
-
-  - Code du domaine de l'Etat - art. R47 (Ab)
-  - Code du domaine de l'Etat - art. R48 (Ab)
+  - Code général de la propriété des personnes publ... - art. R1126-3 (Ab)
 
 _Cite_:
 
