--- a/02. Partie réglementaire/Article R1126-4 - 24884624.md
+++ b/02. Partie réglementaire/Article R1126-4 - 24884624.md
@@ -1,36 +1,27 @@
 # Article R1126-4
 
-Les sommes et valeurs quelconques dues par des sociétés ou établissements à caractère commercial mentionnés au 2° de
+Les sommes et valeurs quelconques dues par des sociétés ou établissements à caractère commercial mentionnées au 2° de
 l'article L. 1126-2 peuvent être déposées à la Caisse des dépôts et consignations lorsqu'elles n'ont fait l'objet de la part
-des ayants droit d'aucune réclamation au terme du délai de dix ans fixé par le troisième alinéa de l'article 2 de la loi n°
-77-4 du 3 janvier 1977 modifiant l'article 189 bis du code de commerce concernant la prescription en matière commerciale. 
+des titulaires d'aucune réclamation au terme du délai de dix ans fixé par le premier alinéa de l'article 2 de la loi n° 77-4
+du 3 janvier 1977 modifiant l'article 189 bis du code de commerce concernant la prescription en matière commerciale. 
 
-Les fonds et titres mentionnés à l'article L. 1126-3 ayant donné lieu, de la part des établissements dépositaires, à la
-clôture de compte prévue au premier alinéa de l'article 2 de la loi susmentionnée sont déposés à la Caisse des dépôts et
-consignations. 
-
-Six mois avant de procéder à ce dépôt, les sociétés ou établissements mentionnés aux deux alinéas précédents en informent les
-ayants droit par lettre recommandée adressée à leur dernier domicile connu.
+Six mois avant de procéder à ces dépôts, les sociétés ou les établissements mentionnés au premier alinéa en informent les
+titulaires par lettre recommandée à leur dernier domicile connu.
 
 **Liens relatifs à cet article**
 
 _Cite_:
 
-  - Loi n°77-4 du 3 janvier 1977 - art. 2 (V)
+  - Loi n°77-4 du 3 janvier 1977 - art. 2
   - Code général de la propriété des personnes publ... - art. L1126-2 (V)
-  - Code général de la propriété des personnes publ... - art. L1126-3 (V)
 
 _Codifié par_:
 
   - Décret n°2011-1612 du 22 novembre 2011 - art.
 
-_Créé par_:
+_Modifié par_:
 
-  - Décret n°2011-1612 du 22 novembre 2011 - art.
-
-_Anciens textes_:
-
-  - Code du domaine de l'Etat - art. R47-1 (Ab), alinéas 1à 4.
+  - Décret n°2015-1092 du 28 août 2015 - art. 4
 
 _Cité par_:
 
