--- a/02. Partie réglementaire/Article R2124-26 - 24885076.md
+++ b/02. Partie réglementaire/Article R2124-26 - 24885076.md
@@ -1,38 +1,34 @@
 # Article R2124-26
 
 Le projet de concession fait l'objet d'une instruction administrative conduite par le service chargé de la gestion du domaine
-public maritime. 
+public maritime.
 
 Le service gestionnaire du domaine public maritime recueille l'avis du directeur départemental des finances publiques qui est
-en outre chargé de fixer les conditions financières de la concession. 
+en outre chargé de fixer les conditions financières de la concession.
 
 Le préfet soumet le projet pour avis à la commission consultative départementale de sécurité et d'accessibilité lorsque la
 commune ou le groupement de communes invoque une impossibilité matérielle ne permettant pas l'accessibilité de tout ou partie
 de la plage et de ses installations ou équipements aux personnes handicapées ou qu'il estime que le projet n'apporte pas de
-réponse satisfaisante à l'obligation d'accès des personnes handicapées. 
+réponse satisfaisante à l'obligation d'accès des personnes handicapées.
 
 Le délai imparti pour rendre l'avis prévu à l'alinéa précédent est de deux mois. L'absence de réponse dans ce délai vaut avis
-favorable. 
+favorable.
 
 A l'issue de l'instruction administrative, le service gestionnaire du domaine public maritime transmet le dossier au préfet
-avec sa proposition et, le cas échéant, un projet de contrat de concession. 
+avec sa proposition et, le cas échéant, un projet de contrat de concession.
 
-Lorsque le projet est situé dans un espace remarquable au sens de l'article L. 146-6 du code de l'urbanisme, il ne peut être
+Lorsque le projet est situé dans un espace remarquable au sens de l'article L. 121-23 du code de l'urbanisme, il ne peut être
 autorisé qu'après avis de la commission départementale compétente en matière de nature, paysages et sites.
 
 **Liens relatifs à cet article**
-
-_Anciens textes_:
-
-  - Décret n°2006-608 du 26 mai 2006 - art. 8 (Ab)
 
 _Codifié par_:
 
   - Décret n°2011-1612 du 22 novembre 2011 - art.
 
-_Créé par_:
+_Modifié par_:
 
-  - Décret n°2011-1612 du 22 novembre 2011 - art.
+  - Décret n°2015-1783 du 28 décembre 2015 - art. 9
 
 _Cité par_:
 
@@ -42,4 +38,4 @@ _Cité par_:
 
 _Cite_:
 
-  - Code de l'urbanisme - art. L146-6 (V)
+  - Code de l'urbanisme - art. L146-6
